# diploma-thesis

./: README.md
demo/: .editorconfig  .eslintignore  .eslintrc.json  .gitignore  .prettierrc  README.md  generate_kafka_messages.py  lefthook.yml  mise.toml  package-lock.json  package.json  tsconfig.json
demo/helm/: flux.values.yaml  strimzi.values.yaml
demo/imports/fluxcd-2-3/: cdk8s.yaml  index.ts
demo/imports/grafana-5-19/: cdk8s.yaml  index.ts
demo/imports/k8s-1-32/: cdk8s.yaml
demo/imports/keda-2-18/: cdk8s.yaml  index.ts
demo/imports/prometheus-operator-0-58/: cdk8s.yaml
demo/imports/strimzi-0-45/: cdk8s.yaml  index.ts
demo/lib/: App.ts
demo/local/: kind.yaml
demo/src/: main.ts
demo/src/charts/: Dowloader.ts  Embeder.ts  Grafana.ts  ImageReactor.ts  Kafka.ts  Keda.ts  OperatorChart.ts  OperatorGrafana.ts  OperatorKafka.ts  OperatorPrometehus.ts  Prometheus.ts  Telepresence.ts  dashboard.json  kafka-metrics-config.yaml
downloader/: .dockerignore  .env.example  .gitignore  .golangci.yaml  Dockerfile  README.md  go.mod  go.sum  main.go  mise.toml
downloader/internal/config/: config.go
downloader/internal/consumer/: kafka_consumer.go
downloader/internal/downloader/: downloader.go
downloader/internal/health/: checker.go  server.go  (+1 more)
embedder/: Dockerfile  README.md  main.py  mise.toml  pyproject.toml
image-reactor/: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  README.md  export_openapi.py  lefthook.yml  main.py  mise.toml  pyproject.toml
image-reactor/app/: __init__.py  main.py
image-reactor/app/domains/: models.py  schema.py
image-reactor/app/internal/: config.py  exception_handler.py  logging_config.py
image-reactor/app/middleware/: __init__.py  localhost_docs.py
image-reactor/app/repositories/: __init__.py  failed_downloads_attempts_repository.py  image_repository.py
image-reactor/app/routers/http/: __init__.py  health.py
image-reactor/app/routers/http/v1/: __init__.py  failed_downloads_attempts.py  images.py
image-reactor/app/services/: database.py  metrics.py
image-reactor/dev/: docker-compose.yml
image-reactor/doc/: openapi_health.json  openapi_v1.json
image-reactor/migrations/: README.md  yoyo.ini
image-reactor/migrations/migrations/: 0001_initial_schema.rollback.sql  0001_initial_schema.sql
image-reactor/tests/: conftest.py
image-reactor/tests/fixtures/: __init__.py  factories.py
image-reactor/tests/unit/: test_config.py  test_failed_downloads_attempts_endpoints.py  test_health_endpoints.py  test_images_endpoints.py  test_repositories.py
image-store-bolt/: .gitignore  .puppet-lint.rc  Gemfile  Puppetfile  README.md  bolt-project.yaml  inventory.yaml  mise.toml
image-store-bolt/.bundle/: config
image-store-bolt/plans/: master.pp  ping.pp  volume.pp
text/: ctufit-thesis.cls  dt.bib  main.tex
text/text/: appendix.tex  text.tex
(+55 files in other folders)
