[project]
name = "image-reactor"
version = "0.1.0"
authors = [
  { name = "Jan Trojak", email = "jan.trojak@recombee.com" }
]
maintainers = [
  { name = "Jan Trojak", email = "jan.trojak@recombee.com" }
]
description = "Image metadata processor with FastAPI and asyncpg"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "asyncpg>=0.30.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "python-dotenv>=1.0.0",
  "email-validator>=2.0.0",
  "loguru>=0.7.0",
  "prometheus-client>=0.21.0",
  "prometheus-fastapi-instrumentator>=7.0.0",
]

[project.optional-dependencies]
dev = [
  "yoyo-migrations>=9.0.0",
  "sqlalchemy>=2.0.0",
  "psycopg2-binary>=2.9.0",
  "pgcli>=4.1.0",
  "black>=24.0.0",
  "ruff>=0.8.0",
]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=4.1.0",
  "httpx>=0.27.0",
  "faker>=22.0.0",
]

[tool.black]
line-length = 160
target-version = ['py312']
include = '\.pyi?$'
skip-string-normalization = true

[tool.ruff]
# Exclude ignored directories.
exclude = [
  ".git",
  ".ruff_cache",
  ".venv",
]
line-length = 160
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
  "E", # pycodestyle errors (indent, whitespace etc.)
  "W", # pycodestyle warnings (indent, whitespace etc.)
  "F", # Pyflakes errors
  "C4", # list and dictonary comprehensions, literals
  "B", # Bugbear - logical errors and designs
  "UP", # Pyupgrade - checks for newer versions
  "N", # PEP8 variable naming conventions
  "Q", # double/single quote check
  "RET", # optimize code around returns
  "SIM", # simplify code
  "ARG", # unused arguments
  "PL", # Pylint - magic values, correct usage
  "PERF", # list and dictionary operations
  "S", # security errors
  "I" # Isort for sorting imports
  # "ANN", # Checks annotations (typing)
  # "NPY", # Numpy errors
  # "PD", # Pandas errors
]
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101", # Allow assert statements in tests
  "PLR2004", # Allow magic value used in comparison
]
[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
  "-v",
  "--strict-markers",
  "--tb=short",
  "--no-cov",
]
markers = [
  "unit: Unit tests (no external dependencies)",
  "integration: Integration tests (requires database)",
  "slow: Slow running tests",
  "api: API endpoint tests",
]
filterwarnings = [
  "ignore::DeprecationWarning:testcontainers.core.waiting_utils",
  "ignore::DeprecationWarning:testcontainers.postgres",
]
